# rag_frameworks

./: .dockerignore  .env.example  .gitignore  .gitkeep  Dockerfile  README.md  pyproject.toml
data/docs/: example.md
data/docs/sample_corpus/: 001_standard_rag_overview.md  002_corrective_rag_overview.md  003_vector_retrieval.md  004_bm25_retrieval.md  005_rrf_fusion.md  006_cross_encoder_reranking.md  007_supported_llm_interfaces.md  008_unsupported_interfaces.md  009_github_models.md  010_ollama.md  011_vllm.md  012_llama_cpp.md  013_lm_studio.md  014_sentence_transformers.md  015_chunking.md  016_chunk_overlap.md  017_ingestion.md  018_index_files.md  019_trace_metadata.md  020_pipeline_steps.md  021_observability.md  022_ui_workbench.md  023_api_query_endpoint.md  024_health_endpoint.md  025_cli_ingest.md  026_cli_ask.md  027_docker_deployment.md  (+53 more)
data/index/: bm25.json  chunks.jsonl  vectors.npy
documentation/: README.md  bm25-and-vector-search.md  corrective-rag.md  deployment-and-github.md  hybrid-retrieval.md  llm-as-judge-faithfulness.md  ml-design.md  observability-and-tracing.md  open-source-llm-interfaces.md  personalization-memory.md  planner-rag.md  query-rewriting-and-quality-gates.md  reciprocal-rank-fusion.md  reranking.md  standard-rag.md  system-design.md
src/rag_framework/: __init__.py  app.py  cli.py  config.py  embeddings.py  judges.py  llms.py  loaders.py  memory.py  models.py  pipelines.py  prompts.py  rerankers.py  splitter.py  vector_store.py
tests/: test_judges.py  test_memory.py  test_pipelines.py  test_splitter.py  test_vector_store.py
(+3 files in other folders)
