[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-framework"
version = "0.1.0"
description = "Deployable standard RAG and corrective RAG pipelines with open-source LLM interfaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pypdf>=4.2.0",
  "scikit-learn>=1.4.0",
  "sentence-transformers>=2.7.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.4"
]

[project.scripts]
rag-framework = "rag_framework.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rag_framework = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
